feat: criado o layout da página de entrada

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web site created by squad33 as a participation in Orange Juices's hackathon."
     />
-    <title>React App</title>
+    <title>Orange Evolution</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
